--- a/app/views/twitr_lessons/lessons/lesson_22.html.erb
+++ b/app/views/twitr_lessons/lessons/lesson_22.html.erb
@@ -1,35 +1,88 @@
 
 
-<!-- 16:9 aspect ratio -->
-<div class="embed-responsive embed-responsive-16by9 embed_video">
-  <iframe src="https://player.vimeo.com/video/174306507" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p>
+  Under <code>/app/views/static_pages/</code> make a file called <code>about.html.erb</code>.
+</p>
+
+<p>
+  This is just going to be a static page, so you can put any kind of text here. For me, I just put in a bunch of filler text for now, but it looks like this:
+</p>
+
+<pre><code class="erb">
+&lt;h1&gt;About&lt;/h1&gt;
+
+&lt;h4&gt;Share you tweets with the world and find others.&lt;/h4&gt;
+
+&lt;p&gt;
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+&lt;/p&gt;
+
+&lt;p&gt;
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+&lt;/p&gt;
+
+&lt;p&gt;
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+&lt;/p&gt;
+</code></pre>
+
+<div class="well">
+<h3>How to Add Filler Text</h3>
+
+<p>
+  Adding filler text can be incredibly useful when you want to put content in the HTML to see what it would look like with content. To generate the classic filler text "Lorem ipsum...", you can go into Sublime, start typing <code>lorem</code>, and then hit <code>tab</code>. Just like that, your "lorem ipsum" text should be generated.
+</p>
+
 </div>
 
+
 <p>
-  Congratulations! You've completed your first Ruby on Rails application! You've successfully created an app from scratch and you kind of understand how these apps are built now.
+  Now let's add the link to this page on the navigation bar so that people can navigate to the about page easily. Go to <code>application.html.erb</code>.
 </p>
 
 <p>
-  You should now be pretty comfortable with tweaking HTML and CSS, and you should be starting to get a feel for how to do things in rails.
+  By now, you should have a grasp on how <code>link_to</code> works in rails. Try and see if you can generate the link yourself.
+</p>
+
+
+<%= render partial: '/shared/quizzes', locals: { question: 'Show me the answer!', answer: "\<%= link_to 'About', about_path %\>", number: 1 } %>
+
+<br class="clear">
+
+<p>Your navigation bar should now look like this:</p>
+
+<pre><code class="erb">
+&lt;div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"&gt;
+  &lt;ul class="nav navbar-nav navbar-right"&gt;
+    &lt;li&gt;&lt;%= link_to 'All Tweets', root_path %&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;%= link_to 'About', about_path %&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/div&gt;&lt;!-- /.navbar-collapse --&gt;
+</code></pre>
+
+<p>
+  Let's try this out. If you go to <code>http://localhost:3000/about</code>, you should see your about page. Awesome!
 </p>
 
 <p>
-  Don't worry if everything doesn't make sense to you right now. As you progress, everything will start to come together. Right now, the important thing is to celebrate the fact that you've built your first app!
+  Let's now move on to building the "Random" page.
 </p>
 
-<p>
-  <strong>Submit your app down below by pasting a link to your GitHub below! Congratulations on your hard work!</strong>
-</p>
+<%= standard_git_workflow %>
 
-<h3>Bonus Challenge</h3>
 
-<p>
-  If you want to deploy your application live on the internet, you can follow the links below. Try and figure it out! :)
-</p>
-
-<ol>
-  <li><%= link_to 'https://devcenter.heroku.com/articles/sqlite3#running-rails-on-postgres', 'https://devcenter.heroku.com/articles/sqlite3#running-rails-on-postgres' %></li>
-  <li><%= link_to 'https://devcenter.heroku.com/articles/git#creating-a-heroku-remote', 'https://devcenter.heroku.com/articles/git#creating-a-heroku-remote' %></li>
-</ol>
-
-<% @submission_form = true %>
